Fix: Rating column on smaller screens

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -58,3 +58,7 @@ i {
 .AvgRating {
   color: #FF0000;
 }
+
+.RatingCol {
+  min-width: 160px;
+}
